This version (untested) can now listen on a udp port for update requests Also, I now work totally off the config file and not constants None of this is tested.
Added a small commit hook program that broadcasts over udp for updates.
I'm not sending a real revision number because I haven't had a chance
to test this out yet

--- a/configuration.json
+++ b/configuration.json
@@ -1,14 +1,6 @@
-{ "server":
-  {
-    "host": "http://consultantbuddy.com"
-  },
-  "auth": 
-  {
-    "username": "admin",
-    "password": "restless"
-  },
-  "tracking_time":
-  {
-    "round_up": "15"
-  }
+{ "data_dir": "/usr/local/dupfs_sync/data",
+  "svn_dir": "/usr/local/dupfs_sync/23432048932erwwer89werwr38wr",
+  "mount_dir": "/DevSync",
+  "internal_server_port": "15917",
+  "external_upd_port": "16917"
 }
