Adding in my mount bind program that generates an exec that mounts the file

--- a/configuration.json
+++ b/configuration.json
@@ -1,6 +1,7 @@
-{ "data_dir": "/usr/local/dupfs_sync/data",
+{ "mount_bind", "mount_bin/mount_bind",
+  "data_dir": "/usr/local/dupfs_sync/data",
   "svn_dir": "/usr/local/dupfs_sync/23432048932erwwer89werwr38wr",
-  "mount_dir": "/DevSync",
+  "mount_dir": "/Development",
   "internal_server_port": "15917",
   "external_upd_port": "16917"
 }
