--- a/configuration.json
+++ b/configuration.json
@@ -1,4 +1,4 @@
-{ "mount_bind", "mount_bin/mount_bind",
+{ "mount_bind": "/Development/fuse/dupfs/mount_bin/mount_bind",
   "data_dir": "/usr/local/dupfs_sync/data",
   "svn_dir": "/usr/local/dupfs_sync/23432048932erwwer89werwr38wr",
   "mount_dir": "/Development",
