--- a/configuration.json.example
+++ b/configuration.json.example
@@ -1,4 +1,5 @@
-{ "mount_bind": "/Development/fuse/dupfs/mount_bin/mount_bind",
+{ "track_filename": ".dupfs_crf450r",
+  "mount_bind": "/Development/fuse/dupfs/mount_bin/mount_bind",
   "data_dir": "/usr/local/dupfs_sync/data",
   "svn_dir": "/usr/local/dupfs_sync/svn",
   "mount_dir": "/Development",
